--- a/package.json
+++ b/package.json
@@ -17,21 +17,25 @@
     "@codemirror/lang-php": "^6.0.1",
     "@codemirror/lang-python": "^6.1.3",
     "@codemirror/lang-sql": "^6.5.4",
-    "@reduxjs/toolkit": "^1.9.5",
+    "@reduxjs/toolkit": "^1.9.7",
     "@replit/codemirror-lang-csharp": "^6.1.0",
+    "@tailwindcss/forms": "^0.5.7",
     "@uiw/codemirror-theme-okaidia": "^4.21.9",
     "@uiw/codemirror-theme-solarized": "^4.21.9",
     "@uiw/codemirror-themes-all": "^4.21.9",
     "@uiw/react-codemirror": "^4.21.9",
     "axios": "^1.4.0",
     "codemirror": "^6.0.1",
+    "express": "^4.19.2",
     "js-cookie": "^3.0.5",
     "preline": "^1.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.2",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.15.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -42,6 +46,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "nodemon": "^3.1.0",
     "postcss": "^8.4.28",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
